<resources>
    <string name="app_name">Game Keeper</string>
    <string name="my_image">My Image</string>
    <string name="user_name">Kate Helen</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="sub_header">Sub Header</string>
    <string name="all_mail">All Mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
</resources>
