<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:title="@string/inbox" android:id="@+id/inbox_id"
            android:icon="@drawable/inbox" ></item>
        <item android:title="Starred" android:id="@+id/starred_id" android:icon="@drawable/star"></item>
        <item android:title="Sent Mail" android:id="@+id/sent_id" android:icon="@drawable/send"></item>
        <item android:title="Draft" android:id="@+id/draft_id" android:icon="@drawable/mail"></item>
    </group>

    <item
        android:title="@string/sub_header"
        android:id="@+id/sub_header_id" >

        <menu>
            <item android:title="@string/all_mail" android:id="@+id/allmail_id" android:icon="@drawable/allmail"></item>
            <item
                android:title="@string/trash" android:id="@+id/trash_id" android:icon="@drawable/delete" />
            <item android:title="@string/spam" android:id="@+id/spam_id" android:icon="@drawable/alert"></item>
        </menu>
    </item>

</menu>